Create routes (about, contact, index). Create models (questions, answers). Install emberfire and modify config/environment.js to link to the project database with firebase.

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,18 @@
-<h2 id="title">Welcome to Ember</h2>
-
-{{outlet}}
+<div class="container">
+  <header>
+    <nav class="navbar navbar-default">
+      <div class="container">
+        <ul class="nav navbar-nav">
+          <li>{{#link-to 'index'}}Home{{/link-to}}</li>
+          <li>{{#link-to 'about'}}About{{/link-to}}</li>
+          <li>{{#link-to 'contact'}}Contact{{/link-to}}</li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <h1>Message Board</h1>
+    {{outlet}}
+  <footer>
+    <hr>Copyright MessageBoard 2016
+  </footer>
+</div>
