Add new-question component. Create save method for the component.

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,6 @@
 <div class="container">
   <header>
+    <h1>Welcome to Message Board</h1>
     <nav class="navbar navbar-default">
       <div class="container">
         <ul class="nav navbar-nav">
@@ -10,7 +11,6 @@
       </div>
     </nav>
   </header>
-  <h1>Message Board</h1>
     {{outlet}}
   <footer>
     <hr>Copyright MessageBoard 2016
