Modify question to be able to click at it and display additional note. Modify question-tile to work properly wiht question route.

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -12,7 +12,5 @@
     </nav>
   </header>
     {{outlet}}
-  <footer>
-    <hr>Copyright MessageBoard 2016
-  </footer>
+  <footer>Copyright MessageBoard 2016</footer>
 </div>
