--- a/app/templates/components/new-question.hbs
+++ b/app/templates/components/new-question.hbs
@@ -22,5 +22,6 @@
     </form>
   </div>
 {{else}}
-  <button {{action 'questionFormShow'}} class="btn btn-success">Add a New Question</button>
+  <hr>
+  <button {{action 'questionFormShow'}} class="btn btn-default">Add a New Question</button>
 {{/if}}
