--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,4 +1,9 @@
-header h1, footer {
+header h1 {
   text-align: center;
   margin-bottom: 15px;
+}
+
+footer {
+  position: absolute;
+  bottom: 15px;
 }
