--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -1,10 +1,5 @@
-{{question.topic}}
-
-Author: {{question.author}}
-Note: {{question.note}}
-
-<ul>
-  {{#each question.answers as |answer|}}
-    <li>{{#link-to 'answer' answer.id}}{{answer.author}} Answer: {{answer.answer}}{{/link-to}}</li>
-  {{/each}}
-</ul>
+<h3 {{action 'noteShow'}}>Question: {{question.topic}}</h3>
+{{#if isNoteShowing}}
+  <h4 {{action 'noteHide'}}>Additional Note: {{question.note}}</h4>
+{{/if}}
+<h4>By: {{question.author}}</h4>
