--- a/app/templates/components/new-answer.hbs
+++ b/app/templates/components/new-answer.hbs
@@ -4,13 +4,13 @@
   <div class="row">
     <form class="col-sm-6">
       <div class="form-group">
-        <label for="author">Author</label>
-        {{input value=author id="author" class="form-control"}}
+        <label for="nameInput">Your name</label>
+        {{input value=nameInput id="nameInput" class="form-control"}}
       </div>
 
       <div class="form-group">
-        <label for="answer">Answer</label>
-        {{textarea value=answer id="answer" rows="5" class="form-control"}}
+        <label for="replyInput">Answer</label>
+        {{input value=replyInput id="replyInput" class="form-control"}}
       </div>
 
       <button {{action 'saveAnswer'}} class="btn btn-success">Post Answer</button>
