Modify routes and components to save questions and answers properly to firebase database. Answers will be displayed correctly.

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -7,3 +7,12 @@ footer {
   position: absolute;
   bottom: 15px;
 }
+.style-action:hover {
+  text-decoration: underline;
+  color: #3399ff;
+}
+
+.style-author {
+  font-size: 16px;
+  font-weight: normal;
+}
