--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -1,7 +1,3 @@
-<h3>Question: {{model.topic}}</h3>
-<h4>By: {{model.author}}</h4>
-<h5>Additional Note: {{model.note}}</h5>
-
-<!-- {{answer-tile answers=model.answers}} -->
+{{question-tile question=model}}
 
 {{new-answer saveAnswer="saveAnswer" question=model}}
