Create update-question component. Add cancel method to hide forms.

--- a/app/templates/components/new-question.hbs
+++ b/app/templates/components/new-question.hbs
@@ -19,6 +19,7 @@
       </div>
 
       <button {{action 'saveQuestion'}} class="btn btn-success">Add</button>
+      <span {{action 'cancel'}} class="btn btn-default">Cancel</span>
     </form>
   </div>
 {{else}}
