--- a/app/templates/components/new-answer.hbs
+++ b/app/templates/components/new-answer.hbs
@@ -14,6 +14,7 @@
       </div>
 
       <button {{action 'saveAnswer'}} class="btn btn-success">Post Answer</button>
+      <span {{action 'cancel'}} class="btn btn-default">Cancel</span>
     </form>
   </div>
 {{else}}
