--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -1,3 +1,5 @@
 {{question-tile question=model}}
 
 {{new-answer saveAnswer="saveAnswer" question=model}}
+
+{{update-question update="update" question=model}}
