--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,12 +1,13 @@
-<h3>About</h3>
-
-<div class="row">
-  <div class="col-sm-4">
-    <img src="https://www.elija.org/uploads/Message%20Board(1).jpg" alt="About us photos">
-  </div>
-  <div class="col-sm-6">
-    <p>
-      Our work helps create a future where every question is realized. MessageBoard is an independent blog starting in Portland, Oregon. Through our journalism, events, and guest bloggers we inform and inspire thousands of people around the world every day.
-    </p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-4">
+      <img src="https://www.elija.org/uploads/Message%20Board(1).jpg" alt="About us photos">
+    </div>
+    <div class="col-sm-6">
+      <h3>About</h3>
+      <p>
+        Our work helps create a future where every question is realized. MessageBoard is an independent blog starting in Portland, Oregon. Through our journalism, events, and guest bloggers we inform and inspire thousands of people around the world every day.
+      </p>
+    </div>
   </div>
 </div>
