--- a/app/templates/components/update-question.hbs
+++ b/app/templates/components/update-question.hbs
@@ -1,14 +1,14 @@
 {{#if updateFormShow}}
   <div class="row">
-    <form class="col-sm-8">
+    <form class="col-sm-10">
       <h4>Edit Question</h4>
       {{input value=question.topic id="editQuestionInput" class="form-control"}}
       <br>
-      <button {{action 'update' question}} class="btn btn-info">Confirm Edit</button>
-      <span {{action 'cancel'}} class="btn btn-default">Cancel</span>
+      <button {{action 'update' question}} class="btn btn-info btn-sm">Confirm Edit</button>
+      <span {{action 'cancel'}} class="btn btn-default btn-sm">Cancel</span>
     </form>
   </div>
 {{else}}
   <br>
-  <button {{action 'updateForm'}} class="btn btn-default">Edit Question</button>
+  <button {{action 'updateForm'}} class="btn btn-default btn-sm">Edit Question</button>
 {{/if}}
