--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,11 +1,12 @@
-<h3>Contact Us</h3>
+<div class="container">
+  <h3>Contact Us</h3>
+  <p>
+    MessageBoard Headquarters<br>
+    400 SW 6th Ave.<br>
+    Portland, OR 97201
+  </p>
 
-<p>
-  MessageBoard Headquarters<br>
-  400 SW 6th Ave.<br>
-  Portland, OR 97201
-</p>
+  <p>(503) 555-7777</p>
 
-<p>(503) 555-7777</p>
-
-<p>info@messageboard.com</p>
+  <p>info@messageboard.com</p>
+</div>
