Add delete question ability. The Delete button can be found in update-question component. Delete question will delete all connected answers.

--- a/app/templates/components/update-question.hbs
+++ b/app/templates/components/update-question.hbs
@@ -11,4 +11,5 @@
 {{else}}
   <br>
   <button {{action 'updateForm'}} class="btn btn-default btn-sm">Edit Question</button>
+  <span {{action 'destroyQuestion' question}} class="btn btn-default btn-sm">Delete Question</span>
 {{/if}}
