--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-  {{update-question update="update" question=model}}
+  {{update-question update="update" destroyQuestion="destroyQuestion" question=model}}
 
   {{question-tile question=model}}
 
