Add delete answer ability. The delete answer method can be found in question-tile component.

--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -11,9 +11,14 @@
         <p>Reply by {{answer.name}}</p>
       </div>
 
-      <div class="col-sm-8">
+      <div class="col-sm-6">
         <p>{{answer.reply}}</p>
       </div>
+
+      <div class="col-sm-1">
+        <p {{action 'destroyAnswer' answer}} class="style-action">Delete</p>
+      </div>
+
     </div>
   {{/each}}
 </ul>
