--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -1,7 +1,7 @@
 <div class="container">
   {{update-question update="update" destroyQuestion="destroyQuestion" question=model}}
 
-  {{question-tile question=model}}
+  {{question-tile destroyAnswer="destroyAnswer" question=model}}
 
   {{new-answer saveAnswer="saveAnswer" question=model}}
 </div>
