--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,16 +1,23 @@
 <div class="container">
   <header>
-    <h1>Welcome to Message Board</h1>
+    <h1>Message Board</h1>
     <nav class="navbar navbar-default">
-      <div class="container">
-        <ul class="nav navbar-nav">
-          <li>{{#link-to 'index'}}Home{{/link-to}}</li>
-          <li>{{#link-to 'about'}}About{{/link-to}}</li>
-          <li>{{#link-to 'contact'}}Contact{{/link-to}}</li>
-        </ul>
+      <div class="container-fluid">
+        <div class="navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li>{{#link-to 'index'}}<span class="glyphicon glyphicon-home"></span> Home{{/link-to}}</li>
+          </ul>
+
+          <ul class="nav navbar-nav navbar-right">
+            <li>{{#link-to 'about'}}About{{/link-to}}</li>
+            <li>{{#link-to 'contact'}}Contact{{/link-to}}</li>
+          </ul>
+        </div>
       </div>
     </nav>
   </header>
+  <div class="container">
     {{outlet}}
-  <footer>Copyright MessageBoard 2016</footer>
+  </div>
+  <footer>Copyright <span class="glyphicon glyphicon-copyright-mark"></span> MessageBoard 2016</footer>
 </div>
