Add style to question and answer on both routes and components. Move update-question component from question.hbs to question-tile.hbs.

--- a/app/templates/components/new-answer.hbs
+++ b/app/templates/components/new-answer.hbs
@@ -19,5 +19,5 @@
   </div>
 {{else}}
   <br>
-  <button {{action 'answerFormShow'}} class="btn btn-default btn-sm">Add Answer</button>
+  <button {{action 'answerFormShow'}} class="btn btn-info btn-sm">Add Answer</button>
 {{/if}}
