--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -7,7 +7,7 @@
       </div>
 
       <div class="col-xs-4 userPost">
-        <p>Post date go here</p>
+        <h5>Post date go here</h5>
       </div>
     </div>
   {{/each}}
