--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,3 +1,7 @@
+.main-container {
+  margin-bottom: 20px;
+}
+
 header h1 {
   text-align: center;
   margin-bottom: 15px;
@@ -5,12 +9,11 @@ header h1 {
 
 footer {
   bottom: 10px;
-  right: 15px;
+  right: 20px;
   position: fixed;
 }
 
 .style-action:hover {
-  text-decoration: underline;
   color: #3399ff;
 }
 
@@ -30,14 +33,19 @@ footer {
 }
 
 .userQuestionBox {
-  border-color: black;
-  border-style: solid;
+  background-color: #FFD1CF;
+  margin-top: 5px;
   margin-bottom: 3px;
   padding-top: 2px;
-  padding-bottom: 2px;
+  padding-bottom: 5px;
   width: 100%;
 }
 
 .userTopic {
   padding-left: 20px;
+}
+
+.styleTopBottom {
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
