--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,11 +1,11 @@
-<div class="container">
+<div class="container main-container">
   <header>
     <h1>Message Board</h1>
-    <nav class="navbar navbar-default">
+    <nav class="navbar">
       <div class="container-fluid">
         <div class="navbar-collapse">
           <ul class="nav navbar-nav">
-            <li>{{#link-to 'index'}}<span class="glyphicon glyphicon-home"></span> Home{{/link-to}}</li>
+            <li class="active">{{#link-to 'index'}}<span class="glyphicon glyphicon-home"></span> Home{{/link-to}}</li>
           </ul>
 
           <ul class="nav navbar-nav navbar-right">
