--- a/app/templates/components/update-question.hbs
+++ b/app/templates/components/update-question.hbs
@@ -1,15 +1,17 @@
 {{#if updateFormShow}}
-  <div class="row">
-    <form class="col-sm-10">
-      <h4>Edit Question</h4>
-      {{input value=question.topic id="editQuestionInput" class="form-control"}}
-      <br>
-      <button {{action 'update' question}} class="btn btn-info btn-sm">Confirm Edit</button>
+  <form class="form-group">
+    <div class="form-inline">
+      <label>Edit Question: </label>
+      {{input value=question.topic id="editQuestionInput"}}
+      <button {{action 'update' question}} class="btn btn-info btn-sm">Confirm</button>
       <span {{action 'cancel'}} class="btn btn-default btn-sm">Cancel</span>
-    </form>
-  </div>
+    </div>
+  </form>
 {{else}}
-  <br>
-  <button {{action 'updateForm'}} class="btn btn-default btn-sm">Edit Question</button>
-  <span {{action 'destroyQuestion' question}} class="btn btn-default btn-sm">Delete Question</span>
+  <div class="pull-right">
+    <span {{action 'updateForm'}} class="style-action">EDIT</span>
+    <span> / </span>
+    <span {{action 'destroyQuestion' question}} class="style-action">DELETE</span>
+    <span> this question</span>
+  </div>
 {{/if}}
