--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -1,5 +1,5 @@
-{{update-question update="update" destroyQuestion="destroyQuestion" question=model}}
+<!-- {{update-question update="update" destroyQuestion="destroyQuestion" question=model}} -->
 
-{{question-tile destroyAnswer="destroyAnswer" question=model}}
+{{question-tile destroyAnswer="destroyAnswer" update="update" destroyQuestion="destroyQuestion" question=model}}
 
 {{new-answer saveAnswer="saveAnswer" question=model}}
