--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -5,7 +5,8 @@
       <div class="container-fluid">
         <div class="navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active">{{#link-to 'index'}}<span class="glyphicon glyphicon-home"></span> Home{{/link-to}}</li>
+            <li>{{#link-to 'index'}}<span class="glyphicon glyphicon-home"></span> Home{{/link-to}}</li>
+            <li>{{#link-to 'favorite'}}<span class="glyphicon glyphicon-thumbs-up"></span> Favorite Question{{/link-to}}</li>
           </ul>
 
           <ul class="nav navbar-nav navbar-right">
@@ -19,5 +20,4 @@
   <div class="container">
     {{outlet}}
   </div>
-  <footer>Copyright <span class="glyphicon glyphicon-copyright-mark"></span> MessageBoard 2016</footer>
 </div>
