--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -2,27 +2,38 @@
   <div class="col-xs-2">
     <h4 class="style-author"> Ask by {{question.author}}</h4>
   </div>
+
   <div class="col-xs-10">
     <h4>{{question.topic}}</h4>
     <h5>Additional Note: {{question.note}}</h5>
     <hr class="styleTopBottom">
-    {{update-question update="update" destroyQuestion="destroyQuestion" question=question}}
+
+    <div class="row">
+      <div class="col-xs-10">
+        {{update-question update="update" destroyQuestion="destroyQuestion" question=question}}
+      </div>
+
+      <div class="col-xs-2">
+        <button {{action 'addToFavorite' question}} class="btn btn-xs pull-right" id="button-fav">Add to Favorite</button>
+      </div>
+    </div>
   </div>
+
 </div>
 
 {{#each question.answers as |answer|}}
   <div class="row userAnswerBox">
-    <div class="col-sm-2 userName">
+    <div class="col-sm-2">
       <p></p>
       <p>Reply by {{answer.name}}</p>
     </div>
 
-    <div class="col-sm-7 userAnswer">
+    <div class="col-sm-7">
       <p></p>
       <p>{{answer.reply}}</p>
     </div>
 
-    <div class="col-sm-1 pull-right userAnswerEdit">
+    <div class="col-sm-1 pull-right">
       <p></p>
       <p {{action 'destroyAnswer' answer}} class="style-action">Delete</p>
     </div>
