--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -4,7 +4,9 @@
   </div>
 
   <div class="col-xs-10">
-    <h4>{{question.topic}}</h4>
+    <h4>{{question-popularity question}}<span> </span>
+      {{question.topic}}
+    </h4>
     <h5>Additional Note: {{question.note}}</h5>
     <hr class="styleTopBottom">
 
@@ -14,7 +16,7 @@
       </div>
 
       <div class="col-xs-2">
-        <button {{action 'addToFavorite' question}} class="btn btn-xs pull-right" id="button-fav">Add to Favorite</button>
+        <button {{action 'addToFavorite' question}} class="btn btn-xs pull-right style-action" id="button-fav">Add to Favorite</button>
       </div>
     </div>
   </div>
@@ -23,19 +25,19 @@
 
 {{#each question.answers as |answer|}}
   <div class="row userAnswerBox">
-    <div class="col-sm-2">
+    <div class="col-xs-2">
       <p></p>
       <p>Reply by {{answer.name}}</p>
     </div>
 
-    <div class="col-sm-7">
+    <div class="col-xs-7">
       <p></p>
       <p>{{answer.reply}}</p>
     </div>
 
-    <div class="col-sm-1 pull-right">
+    <div class="col-xs-3">
       <p></p>
-      <p {{action 'destroyAnswer' answer}} class="style-action">Delete</p>
+      <p {{action 'destroyAnswer' answer}} class="style-action editBox">Delete</p>
     </div>
   </div>
 {{/each}}
