--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -2,7 +2,11 @@
 
 {{#each model.questions as |question|}}
   <div class="row userQuestionBox">
-    <div class="col-xs-7">
+    <div class="col-xs-1">
+      {{avatar-generator question}}
+    </div>
+
+    <div class="col-xs-5">
       <h4>
         {{question-popularity question}}<span> </span>
         {{#link-to 'question' question.id}}{{question.topic}}{{/link-to}}
@@ -10,11 +14,22 @@
       <h5>Ask by {{question.author}}</h5>
     </div>
 
-    <div class="col-xs-4">
+    <div class="col-xs-3">
       <h5>Post date go here</h5>
+    </div>
+
+    <div class="col-xs-2">
       <h5>Number of answers go here</h5>
     </div>
   </div>
 {{/each}}
+
+<center>
+  <h5>
+    <span class="glyphicon glyphicon-question-sign"></span> Waiting for answer /
+    <span class="glyphicon glyphicon-pencil"></span> Answers /
+    <span class="glyphicon glyphicon-fire"></span> Popular
+  </h5>
+</center>
 
 {{new-question saveQuestion="saveQuestion"}}
