Add number of answers related to the questions.

--- a/app/templates/components/display-favorite.hbs
+++ b/app/templates/components/display-favorite.hbs
@@ -19,7 +19,8 @@
     </div>
 
     <div class="col-xs-2">
-      <h5>Number of answers go here</h5>
+      <center><h5>Answers</h5>
+      <h4>{{question.answers.length}}</h4></center>
     </div>
   </div>
 {{/each}}
