--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -14,12 +14,13 @@
       <h5>Ask by {{question.author}}</h5>
     </div>
 
-    <div class="col-xs-3">
+    <div class="col-xs-4">
       <h5>Post date go here</h5>
     </div>
 
-    <div class="col-xs-2">
-      <h5>Number of answers go here</h5>
+    <div class="col-xs-1">
+      <center><h5>Answers</h5>
+      <h4>{{question.answers.length}}</h4></center>
     </div>
   </div>
 {{/each}}
