--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -23,21 +23,4 @@
 
 </div>
 
-{{#each question.answers as |answer|}}
-  <div class="row userAnswerBox">
-    <div class="col-xs-2">
-      <p></p>
-      <p>Reply by {{answer.name}}</p>
-    </div>
-
-    <div class="col-xs-7">
-      <p></p>
-      <p>{{answer.reply}}</p>
-    </div>
-
-    <div class="col-xs-3">
-      <p></p>
-      <p {{action 'destroyAnswer' answer}} class="style-action editBox">Delete</p>
-    </div>
-  </div>
-{{/each}}
+{{answer-tile answers=question.answers destroyAnswer="destroyAnswer"}}
