--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -23,4 +23,4 @@
 
 </div>
 
-{{answer-tile answers=question.answers destroyAnswer="destroyAnswer"}}
+{{answer-tile answers=question.answers destroyAnswer="destroyAnswer" upvote="upvote"}}
