--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -1,3 +1,3 @@
-{{question-tile destroyAnswer="destroyAnswer" update="update" destroyQuestion="destroyQuestion" question=model}}
+{{question-tile destroyAnswer="destroyAnswer" update="update" destroyQuestion="destroyQuestion"  upvote="upvote" question=model}}
 
 {{new-answer saveAnswer="saveAnswer" question=model}}
