Install Moment package to ember. Add date to model of question database. Question can be displayed the posted date.

--- a/app/templates/components/display-favorite.hbs
+++ b/app/templates/components/display-favorite.hbs
@@ -15,7 +15,8 @@
     </div>
 
     <div class="col-xs-3">
-      <h5>Post date go here</h5>
+      <h5>Posted on</h5>
+      <p>{{question.date}}</p>
     </div>
 
     <div class="col-xs-2">
