--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -4,10 +4,12 @@
   </div>
 
   <div class="col-xs-10">
+    <p>{{question.date}}</p>
     <h4>{{question-popularity question}}<span> </span>
       {{question.topic}}
     </h4>
     <h5>Additional Note: {{question.note}}</h5>
+
     <hr class="styleTopBottom">
 
     <div class="row">
